--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -33,5 +33,8 @@ errorMessages:
   # 귀속 아이템을 버리려고 했을 때 출력되는 메시지
   noDropPrivateItem: '&c귀속아이템은 버릴 수 없습니다.'
 
+  # 아이템 액자에 귀속 아이템을 넣으려고 했을 때 출력되는 메시지
+  noItemFrame: '&c귀속아이템은 아이템액자에 넣을 수 없습니다.'
+
   # 잘못된 명령어를 사용하였을 때 출력되는 메시지
   wrongCommand: '&c잘못된 명령어입니다. (다시 시도해주세요)'
